<resources>
    <string name="app_name">Memo</string>
    <string name="folder">Folder</string>
    <string name="cloud">Cloud</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="note">Note</string>
    <string name="create_folder">Create Folder</string>
    <string name="save_note">Save Note</string>
    <string name="open_camera">Open Camera</string>
    <string name="use_pen">Use Pen</string>
    <string name="add_note">Add Note</string>
    <string name="back">Back</string>
    <string name="show_more">Show More</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="new_text">New Text</string>
</resources>